fixed wrong alignment.

--- a/assets/css/done.css
+++ b/assets/css/done.css
@@ -9,8 +9,10 @@ h3 {
 	font-size: 16px;
 	margin-top: 12px;
 	margin-bottom: 0;
-	text-indent: 12px;
 	text-align: center;
+	text-indent: 0;
+	font-weight: bold;
+	display: block;
 }
 
 h4 {
